Chore: Automated upgrade to Java 17